k8s/k8s-learn/k8s-learn/pod/src/main/resources/ingress2/ingress-tomcat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-test
spec:
  rules:
    - host: ingress-tomcat.nullnull.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat-svc
              servicePort: 8080
